--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,5 +1,5 @@
 .background.half {
-  background: #7389a3;
+  background: #ffa153;
   opacity: 50%;
   background-size: cover;
   background-attachment: fixed, fixed;
