--- a/src/css/board.css
+++ b/src/css/board.css
@@ -10,6 +10,12 @@
   margin: 0 20px;
 }
 
+@media screen and (max-width: 736px) {
+  .comment-input-wrapper {
+    width: calc(100vw - 40px);
+  }
+}
+
 .comment-box {
   flex: 1 1 0%;
   vertical-align: top;
